# pitch-analyzer

./: .gitignore  README.md  RUN_GUIDE.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
models/: README.md
src/: karaoke_display.ts  main.ts  models_lyrics.ts  pitch_canvas.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: .gitkeep
src-tauri/src/: analyzer.rs  audio.rs  decoder.rs  dsp.rs  lib.rs  lyrics.rs  main.rs  mel.rs  models.rs  playback.rs
src-tauri/tests/: integration.rs  lyrics_test.rs  srt_test.rs
